# Midx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  database_representation.drawio  flake.nix  shell.nix
docs/: Doxyfile  header.html
docs/html/: annotated.html  annotated_dup.js  classMidx_1_1Album-members.html  classMidx_1_1Album.html  classMidx_1_1Album.js  classMidx_1_1Artist-members.html  classMidx_1_1Artist.html  classMidx_1_1Artist.js  classMidx_1_1MusicDir-members.html  classMidx_1_1MusicDir.html  classMidx_1_1MusicDir.js  classMidx_1_1Track-members.html  classMidx_1_1Track.html  classMidx_1_1Track.js  classMidx_1_1TrackMetadata-members.html  classMidx_1_1TrackMetadata.html  classMidx_1_1TrackMetadata.js  classMusicIndexer_1_1Album-members.html  classMusicIndexer_1_1Album.html  classMusicIndexer_1_1Album.js  classMusicIndexer_1_1Artist-members.html  classMusicIndexer_1_1Artist.html  classMusicIndexer_1_1Artist.js  classMusicIndexer_1_1DatabaseOperations_1_1MusicData-members.html  classMusicIndexer_1_1DatabaseOperations_1_1MusicData.html  classMusicIndexer_1_1DatabaseOperations_1_1MusicData.js  classMusicIndexer_1_1MusicDir-members.html  classMusicIndexer_1_1MusicDir.html  classMusicIndexer_1_1MusicDir.js  classMusicIndexer_1_1Track-members.html  classMusicIndexer_1_1Track.html  classMusicIndexer_1_1Track.js  classMusicIndexer_1_1TrackMetadata-members.html  classMusicIndexer_1_1TrackMetadata.html  classMusicIndexer_1_1TrackMetadata.js  classes.html  database__operations_8cpp.html  database__operations_8cpp.js  database__operations_8hpp.html  database__operations_8hpp.js  (+55 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
docs/latex/: annotated.tex  classMusicIndexer_1_1Album.tex  classMusicIndexer_1_1Artist.tex  classMusicIndexer_1_1DatabaseOperations_1_1MusicData.tex  classMusicIndexer_1_1MusicDir.tex  classMusicIndexer_1_1Track.tex  database__operations_8cpp.tex  database__operations_8hpp.tex  database__operations_8hpp_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  namespaceMusicIndexer.tex  namespaceMusicIndexer_1_1DatabaseOperations.tex  namespaceMusicIndexer_1_1DatabaseOperations_1_1Utils.tex  namespaces.tex  refman.tex  utils_8hpp.tex  utils_8hpp_source.tex
src/: cli.hpp  database_operations.cpp  database_operations.hpp  dbops.cpp  dbops.hpp  main.cpp  midx.cpp  midx.hpp  midx_python_bindings.cpp  music_indexer.cpp  music_indexer.hpp  music_indexer_python_bindings.cpp  utils.hpp
